# tiny_computer

./: .gitignore  .gitmodules  OWNERS  README.md  build.ps1  l10n.yaml  patch.ps1  pubspec.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  bug_report_eng.yml  config.yml  feature_request.yml  feature_request_eng.yml
android/: build.gradle  gradle.properties  keystore.properties.example  settings.gradle
android/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
android/app/roomSchema/com.gaurav.avnc.model.db.MainDb/: 1.json  2.json  3.json  4.json  5.json
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/license/: BSD-libjpeg-turbo.txt  X11.txt
android/app/src/main/cpp/: CMakeLists.txt  ClientEx.h  Cursor.h  Utility.h  native-socket.cpp  native-vnc.cpp
android/app/src/main/cpp/patches/: x11.patch
android/app/src/main/cpp/recipes/: xkbcomp.cmake
android/app/src/main/java/com/example/tiny_computer/filepicker/: TinyDocumentsProvider.java
android/app/src/main/java/com/termux/shared/termux/extrakeys/: ExtraKeysConstants.java  ExtraKeysView.java
android/app/src/main/java/com/termux/x11/: CmdEntryPoint.java  LoriePreferences.java  MainActivity.java
android/app/src/main/java/com/termux/x11/utils/: TermuxX11ExtraKeys.java  X11ToolbarViewPager.java
android/app/src/main/kotlin/com/example/tiny_computer/: AudioStream.kt  MainActivity.kt  MainApplication.kt  Signal9Activity.kt
android/app/src/main/kotlin/com/gaurav/avnc/model/: LoginInfo.kt  ServerProfile.kt
android/app/src/main/kotlin/com/gaurav/avnc/model/db/: MainDb.kt  ServerProfileDao.kt
android/app/src/main/kotlin/com/gaurav/avnc/ui/about/: AboutActivity.kt  AboutFragment.kt  LibrariesFragment.kt  LicenseFragment.kt
android/app/src/main/kotlin/com/gaurav/avnc/ui/prefs/: ListPreferenceEx.kt  PrefsActivity.kt
android/app/src/main/kotlin/com/gaurav/avnc/ui/vnc/: Dispatcher.kt  FrameScroller.kt  FrameState.kt  FrameView.kt  HostKeyFragment.kt  IntentReceiverActivity.kt  KeyHandler.kt  LayoutManager.kt  LoginFragment.kt  Toolbar.kt  TouchHandler.kt  VirtualKeys.kt  VncActivity.kt
android/app/src/main/kotlin/com/gaurav/avnc/ui/vnc/gl/: Frame.kt  FrameProgram.kt  Renderer.kt  ShaderCompiler.kt  Shaders.kt
android/app/src/main/kotlin/com/gaurav/avnc/util/: AppPreferences.kt  Binding.kt  Clipboard.kt  Debugging.kt  DeviceAuthPrompt.kt  LiveEvent.kt  LiveRequest.kt  MsgDialog.kt  OpenableDocument.kt  SamsungDex.kt  SpinnerEx.kt
android/app/src/main/kotlin/com/gaurav/avnc/viewmodel/: BaseViewModel.kt  EditorViewModel.kt  PrefsViewModel.kt  UrlBarViewModel.kt  VncViewModel.kt
android/app/src/main/kotlin/com/gaurav/avnc/viewmodel/service/: Discovery.kt  SshTunnel.kt
android/app/src/main/kotlin/com/gaurav/avnc/vnc/: Messenger.kt  PointerButton.kt  UserCredential.kt  VncClient.kt  VncUri.kt  XKeySym.kt  XKeySymAndroid.kt  XKeySymUnicode.kt  XTKeyCode.kt
android/app/src/main/res/color/: control_icon.xml
android/app/src/main/res/drawable/: bg_circular_button.xml  bg_frame_view.xml  bg_round_rect.xml  bg_toggle_button.xml  bg_urlbar.xml  ic_arrow_back.xml  ic_bookmark.xml  ic_bug.xml  ic_clear.xml  ic_computer.xml  ic_computer_shortcut.xml  ic_download.xml  ic_experimental.xml  ic_file.xml  ic_gesture.xml  ic_github.xml  ic_gpl.xml  ic_help.xml  ic_info.xml  ic_key.xml  ic_keyboard.xml  ic_keyboard_arrow_down.xml  ic_keyboard_arrow_left.xml  ic_keyboard_arrow_right.xml  ic_keyboard_arrow_up.xml  ic_keyboard_mini.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml  ic_lightbulb.xml  ic_lock.xml  ic_menu.xml  ic_mouse.xml  ic_palette.xml  ic_password.xml  ic_person.xml  ic_plus.xml  ic_refresh.xml  ic_save.xml  ic_screen_rotation.xml  (+18 more)
android/app/src/main/res/layout/: activity_about.xml  activity_settings.xml  activity_signal_9.xml  activity_vnc.xml  fragment_about.xml  fragment_credential.xml  fragment_libraries.xml  fragment_license.xml  fragment_profile_editor.xml  fragment_profile_editor_advanced.xml  help_btn.xml  server_discovery_item.xml  server_item.xml  toolbar_drawer.xml  virtual_keys.xml
android/app/src/main/res/values/: arrays.xml  colors.xml  dimens.xml  ic_launcher_background.xml  strings.xml  styles.xml
android/app/src/main/res/values-zh-rCN/: strings.xml
android/app/src/main/res/values-zh-rTW/: strings.xml
android/app/src/main/res/xml/: pref_appearance.xml  pref_input.xml  pref_main.xml  pref_server.xml  pref_viewer.xml  preferences.xml
extra/: build-tiny-rootfs.md  faq.md  readme  readme.md  solution.md  tiny_virtual_mic.c
extra/cross/: chn_fonts.reg  install-box  install-dxvk  install-hangover  install-hangover-stable  install-wine  install-wine2
extra/getifaddrs_bridge/: getifaddrs_bridge_client_lib.c  getifaddrs_bridge_server.c  readme.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  workflow.dart
lib/l10n/: intl_en.arb  intl_zh.arb  intl_zh_Hant.arb
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugins.cmake
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
readme/: README-1.0.1.md
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
